Added support for Candlestick chart.

--- a/configuration.cfg
+++ b/configuration.cfg
@@ -14,10 +14,12 @@ screens : [
 # Configuration per screen
 # This doesn't make any effect if screens are not enabled above
 [epd2in13v2]
-mode : line
+#mode : line
+mode : candle
 
 [epd2in13bv3]
 mode  : line
 
 [picture]
 filename : /home/pi/output.png
+mode : candle
