Add currency setting to configuration.cfg (#8)
* Add currency setting to configuration.cfg

--- a/configuration.cfg
+++ b/configuration.cfg
@@ -3,6 +3,7 @@ console_logs             : false
 #logs_file                : /tmp/zero-btc-screen.log
 dummy_data               : false
 refresh_interval_minutes : 15
+currency		 : BTC
 
 # Enabled screens or devices
 screens : [
