Add Pimoroni inkyWhat (Red, Black, White) EPD (#7)
* added inkyWhat

* added inkyWhat take 2

* fixed but the image is boffed

* changed file case

* Delete inkyWhatRBW.py

* Got inkyWhat working

* Fixed missed change and updated other screens so they won't 'break'

* added different way to start program on boot

* Update README.md

* Update README.md

* Updates based on review comments

* Fix for screen not refreshing cleanly

* Fixes after testing

* Update README.md

Adding InkyWhat library to readme

* Fixed error with caption parameters

--- a/configuration.cfg
+++ b/configuration.cfg
@@ -10,6 +10,7 @@ screens : [
     epd2in13v2
 #    epd2in13bv3
 #    picture
+#    inkyWhatRBW
   ]
 
 # Configuration per screen
@@ -23,4 +24,7 @@ mode  : line
 
 [picture]
 filename : /home/pi/output.png
+mode : candle
+
+[inkyWhatRBW]
 mode : candle
